--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.1.3.RELEASE'
 }
 
 group 'com.detroitlabs'
@@ -10,8 +11,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.1.3.RELEASE'
 }
 
 test {
